--- a/Accomplist/Base.lproj/Main.storyboard
+++ b/Accomplist/Base.lproj/Main.storyboard
@@ -29,22 +29,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wcy-FK-enb" userLabel="BackView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="joQ-QC-ebv">
-                                        <rect key="frame" x="19" y="141" width="34" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <state key="normal" title="Edit">
-                                            <color key="titleColor" red="0.83137254900000002" green="0.86274509799999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="editToDoButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n53-gc-cRe"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wZ-kk-cED">
-                                        <rect key="frame" x="0.0" y="111" width="375" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wZ-kk-cED">
+                                        <rect key="frame" x="16" y="86" width="343" height="45"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="0yP-QB-enn"/>
+                                            <constraint firstAttribute="height" constant="45" id="T5G-NZ-WFs"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="LouisGeorgeCafe" family="Louis George Cafe" pointSize="25"/>
+                                        <fontDescription key="fontDescription" name="LouisGeorgeCafe-Bold" family="Louis George Cafe" pointSize="40"/>
                                         <color key="textColor" red="0.83137254900000002" green="0.86274509799999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -77,7 +67,7 @@
                                         </connections>
                                     </tableView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ib5-kz-5eo">
-                                        <rect key="frame" x="19" y="7.5" width="36" height="65"/>
+                                        <rect key="frame" x="19" y="20" width="36" height="65"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="65" id="mRK-0m-Jro"/>
                                         </constraints>
@@ -98,7 +88,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accomplist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7g-0G-EUf">
-                                        <rect key="frame" x="100" y="19" width="175" height="42"/>
+                                        <rect key="frame" x="100" y="31.5" width="175" height="42"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="175" id="RVY-x1-oub"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="dRl-78-QOa"/>
@@ -107,7 +97,7 @@
                                         <color key="textColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Welcome! Add a new list from the menu on the side" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F8q-xk-smr" userLabel="welcomeTextView">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Hi there👋 Add a new list from the menu on the side" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F8q-xk-smr" userLabel="welcomeTextView">
                                         <rect key="frame" x="67.5" y="269.5" width="240" height="128"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="9dH-tw-hfZ"/>
@@ -117,25 +107,37 @@
                                         <fontDescription key="fontDescription" name="LouisGeorgeCafe" family="Louis George Cafe" pointSize="27"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="joQ-QC-ebv">
+                                        <rect key="frame" x="19" y="141" width="50" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="2bE-Ox-ofK"/>
+                                            <constraint firstAttribute="height" constant="36" id="HQi-T3-PTY"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Edit">
+                                            <color key="titleColor" red="0.83137254900000002" green="0.86274509799999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="editToDoButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n53-gc-cRe"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="mPl-Bo-5bF" secondAttribute="bottom" constant="18" id="0tl-7h-Yvs"/>
-                                    <constraint firstItem="joQ-QC-ebv" firstAttribute="top" secondItem="7wZ-kk-cED" secondAttribute="bottom" id="2Yf-Zv-ake"/>
+                                    <constraint firstItem="7wZ-kk-cED" firstAttribute="leading" secondItem="joQ-QC-ebv" secondAttribute="trailing" constant="-53" id="96e-X2-Lvw"/>
                                     <constraint firstItem="mPl-Bo-5bF" firstAttribute="width" secondItem="Wcy-FK-enb" secondAttribute="width" multiplier="0.9" id="B7N-Ul-Pm6"/>
                                     <constraint firstItem="Ib5-kz-5eo" firstAttribute="leading" secondItem="Wcy-FK-enb" secondAttribute="leading" constant="19" id="Djo-9C-eFU"/>
-                                    <constraint firstItem="cbr-rI-A4U" firstAttribute="leading" relation="lessThanOrEqual" secondItem="joQ-QC-ebv" secondAttribute="trailing" constant="281" id="Dmb-Wb-WTs"/>
+                                    <constraint firstItem="7wZ-kk-cED" firstAttribute="top" relation="lessThanOrEqual" secondItem="M7g-0G-EUf" secondAttribute="bottom" constant="25" id="IKC-xM-tP0"/>
                                     <constraint firstItem="mPl-Bo-5bF" firstAttribute="centerX" secondItem="Wcy-FK-enb" secondAttribute="centerX" id="J3A-Om-kAD"/>
-                                    <constraint firstItem="Ib5-kz-5eo" firstAttribute="top" secondItem="Wcy-FK-enb" secondAttribute="top" constant="7.5" id="UWw-ra-zvn"/>
-                                    <constraint firstItem="M7g-0G-EUf" firstAttribute="top" secondItem="Wcy-FK-enb" secondAttribute="top" constant="19" id="V3b-dM-yt1"/>
+                                    <constraint firstItem="mPl-Bo-5bF" firstAttribute="top" secondItem="joQ-QC-ebv" secondAttribute="bottom" constant="5" id="QhQ-6b-P55"/>
+                                    <constraint firstItem="joQ-QC-ebv" firstAttribute="leading" secondItem="Wcy-FK-enb" secondAttribute="leading" constant="19" id="Vho-0v-cfm"/>
                                     <constraint firstItem="M7g-0G-EUf" firstAttribute="centerX" secondItem="Wcy-FK-enb" secondAttribute="centerX" id="XZT-X8-eTf"/>
                                     <constraint firstAttribute="trailing" secondItem="cbr-rI-A4U" secondAttribute="trailing" constant="19" id="cDn-cR-dbG"/>
                                     <constraint firstItem="Ib5-kz-5eo" firstAttribute="centerY" secondItem="M7g-0G-EUf" secondAttribute="centerY" id="dzT-ue-uGa"/>
-                                    <constraint firstItem="7wZ-kk-cED" firstAttribute="top" secondItem="M7g-0G-EUf" secondAttribute="bottom" constant="50" id="hU5-hq-RKK"/>
-                                    <constraint firstItem="joQ-QC-ebv" firstAttribute="leading" secondItem="Wcy-FK-enb" secondAttribute="leading" constant="19" id="mNX-1O-Avd"/>
+                                    <constraint firstItem="joQ-QC-ebv" firstAttribute="top" secondItem="7wZ-kk-cED" secondAttribute="bottom" constant="10" id="gHU-8R-Oua"/>
                                     <constraint firstItem="F8q-xk-smr" firstAttribute="centerY" secondItem="Wcy-FK-enb" secondAttribute="centerY" id="rbn-lT-Ujw"/>
                                     <constraint firstItem="cbr-rI-A4U" firstAttribute="centerY" secondItem="joQ-QC-ebv" secondAttribute="centerY" id="s0C-ih-pOK"/>
-                                    <constraint firstItem="7wZ-kk-cED" firstAttribute="width" secondItem="Wcy-FK-enb" secondAttribute="width" id="u9f-D2-ayw"/>
                                     <constraint firstItem="mPl-Bo-5bF" firstAttribute="height" secondItem="Wcy-FK-enb" secondAttribute="height" multiplier="0.7" id="uhU-Uj-Wy5"/>
                                     <constraint firstItem="7wZ-kk-cED" firstAttribute="centerX" secondItem="Wcy-FK-enb" secondAttribute="centerX" id="yLT-DV-ok8"/>
                                     <constraint firstItem="F8q-xk-smr" firstAttribute="centerX" secondItem="Wcy-FK-enb" secondAttribute="centerX" id="yhp-lS-XgP"/>
@@ -144,6 +146,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="Ib5-kz-5eo" secondAttribute="top" id="7pR-3L-sFf"/>
                             <constraint firstItem="Wcy-FK-enb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="SCZ-Ra-je2"/>
                             <constraint firstItem="Wcy-FK-enb" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="VdK-xf-oHJ"/>
                             <constraint firstItem="Wcy-FK-enb" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="fiv-SX-6zc"/>
@@ -163,7 +166,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1922.4000000000001" y="-679.61019490254876"/>
+            <point key="canvasLocation" x="-1923.1884057971015" y="-679.89130434782612"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="Ris-ol-IWy">
